@@ -1,3 +1,12 @@
+2010-04-10  Wei Guozhi  <carrot@google.com>
+
+	PR target/42601
+	* config/arm/arm.c (arm_pic_static_addr): New function.
+	(legitimize_pic_address): Call arm_pic_static_addr when it detects
+	a static symbol.
+	(arm_output_addr_const_extra): Output expression for new pattern.
+	* config/arm/arm.md (UNSPEC_SYMBOL_OFFSET): New unspec symbol.
+
 2010-04-10  Bernd Schmidt  <bernd.schmidt@codesourcery.com>
 
 	* ira-costs.c (record_reg_classes): Ignore alternatives that are
